--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "mongoose": "^7.3.4",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.3",
-    "socket.io": "^4.7.1",
-    "validator": "^13.9.0"
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "validator": "^13.9.0",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
-    "nodemon": "^3.0.1",
     "jest": "^29.6.2",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   }
 }
